<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@drawable/search"
        android:title="@string/search_shop"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/register_shop"
        android:icon="@drawable/build"
        android:title="@string/register_shop"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_product_to_shop"
        android:icon="@drawable/add_shopping_cart"
        android:title="@string/add_product_to_shop"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/account_type"
        android:icon="@drawable/account_box_type"
        android:title="Account" />
    <item
        android:id="@+id/logout"
        android:icon="@drawable/exit_to_app"
        android:title="Logout" />
</menu>