<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.mechanics.frags.NotificationsFragment">

    <ListView
        android:id="@+id/notification_lv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/notification_item"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/no_notifications_yet_im"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal|center"
        android:contentDescription="@string/pic"
        android:src="@drawable/empty_tray"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/no_notifications_yet_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="200dp"
        android:text="@string/no_notifications_created_yet"
        android:visibility="gone"
        tools:visibility="visible" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@drawable/add"
        android:contentDescription="@string/add" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>