<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="5sp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/booking_item_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/account_circle"
        android:contentDescription="@string/pic" />
    <TextView
        android:id="@+id/booking_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:visibility="visible"
        android:textColor="#000"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/booking_item_image"
        app:layout_constraintTop_toTopOf="@+id/booking_item_image" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meet_up_time"
        android:layout_marginStart="10dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@+id/booking_item_image"
        app:layout_constraintTop_toBottomOf="@+id/booking_item_name"
        app:layout_goneMarginStart="10dp" />


    <CheckBox
        android:id="@+id/done_check_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>