<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.landing.frags.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.043"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_detail" />

        <ImageView
            android:id="@+id/image_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="16dp"
            android:scaleType="fitXY"
            android:src="@drawable/bot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_detail"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/description_detail"
            app:layout_constraintHorizontal_bias="0.218"
            app:layout_constraintStart_toStartOf="@+id/description_detail"
            app:layout_constraintTop_toBottomOf="@+id/quantity_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity_detail_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="1"
                app:layout_constraintBottom_toTopOf="@id/sign_up_page_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/quantity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/quantity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.059"
            app:layout_constraintStart_toStartOf="@+id/description_detail"
            app:layout_constraintTop_toBottomOf="@+id/description_detail" />

        <ImageView
            android:id="@+id/increase_count"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/add_circle"
            app:layout_constraintBottom_toBottomOf="@+id/name_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/name_input_layout"
            app:layout_constraintHorizontal_bias="0.62"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_input_layout"
            app:layout_constraintVertical_bias="0.612" />

        <ImageView
            android:id="@+id/decrease_count"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/auto_bot"
            android:src="@drawable/remove_circle"
            app:layout_constraintBottom_toBottomOf="@+id/name_input_layout"
            app:layout_constraintEnd_toStartOf="@+id/add_to_cart_btn"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toEndOf="@+id/name_input_layout"
            app:layout_constraintTop_toTopOf="@+id/name_input_layout"
            app:layout_constraintVertical_bias="0.612" />

        <Button
            android:id="@+id/add_to_cart_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginEnd="28dp"
            android:drawableEnd="@drawable/add_shopping_cart"
            android:text="@string/add_to_cart"
            android:textSize="10sp"
            android:textColor="#000"
            app:layout_constraintBottom_toBottomOf="@+id/name_input_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_input_layout"
            app:layout_constraintVertical_bias="0.428" />

        <Button
            android:id="@+id/proceed_to_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proceed_to_cart"
            android:textColor="#000"
            android:drawableEnd="@drawable/shopping_cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
            app:layout_constraintVertical_bias="0.83" />

        <TextView
            android:id="@+id/total_detail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="15sp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/proceed_to_cart"
            app:layout_constraintEnd_toEndOf="@+id/decrease_count"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/increase_count"
            app:layout_constraintTop_toBottomOf="@+id/name_input_layout"
            app:layout_constraintVertical_bias="0.302" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>