<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="260dp"
    android:layout_margin="10dp"
    android:elevation="20dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/auto_bot"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/title_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/title"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/description"
            android:textColor="#fff"
            app:layout_constraintBottom_toTopOf="@+id/price_product"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/price_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/price"
            android:textColor="#fff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/quantity_tv_product"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="5dp"
            android:text="0"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/decrement"
            app:layout_constraintStart_toEndOf="@+id/increment"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/increment"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignBaseline="@id/quantity_tv_product"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_tv_product"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quantity_tv_product"
            app:srcCompat="@drawable/add_circle" />

        <ImageView
            android:id="@+id/decrement"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_tv_product"
            app:layout_constraintEnd_toStartOf="@+id/total_product"
            app:layout_constraintTop_toTopOf="@+id/quantity_tv_product"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/remove_circle" />

        <TextView
            android:id="@+id/total_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/total"
            app:layout_constraintBottom_toBottomOf="@+id/quantity_tv_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quantity_tv_product"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/delete_product"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="56dp"
            app:layout_constraintBottom_toBottomOf="@+id/total_product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/total_product"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/delete_forever" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>